<resources>
    <string name="app_name">AgriMend</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="disease_name">Disease Name</string>
    <string name="chemical_treatment">Chemical Control</string>
    <string name="treat">Treatment</string>
    <string name="general_treatment">General Control</string>
    <string name="capture_plant_photo">Capture Plant Photo</string>
    <string name="capture_photo">close to plant and take a picture of injured part of plant and check it correctly to get result.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_plant_photo">instead of capture photo with camera, you can upload one to test it from anywhere.</string>
    <string name="receive_result">Receive Result</string>
    <string name="result_treat">after sending the desired photo, you will get result of picture, and how to deal with it in different style of treatments.</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo_btn">Upload Photo</string>
    <string name="publish_post">Publish Your Post By Clicking Add Icon</string>
    <string name="save_changes_btn">Save Changes</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="loading">Loading...........</string>
    <string name="open_signup_form">Don\'t have an account ? Sign Up</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="password">Password :</string>
    <string name="email">Email :</string>
    <string name="post_title">TextView</string>
    <string name="post_date">post date</string>
    <string name="post_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit,rum eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="write_comment_hint">Write Comment........</string>
    <string name="add_comment">Add</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="image">image</string>
    <string name="title">Title</string>
    <string name="plant_name">Plant Name</string>
    <string name="description">Description</string>
    <string name="reset_description_steps">We Just Need Your Email Address To Send</string>
    <string name="complete_description">You Password Reset Email</string>
    <string name="send_email">Send Email</string>
    <string name="username">username</string>
    <string name="experience_level">experience level</string>
    <string name="text_comment">Text Comment Goes Here</string>
    <string name="comment_for_post_date">10:20</string>
    <string name="location">location</string>
    <string name="hellow">hellow</string>
    <string name="anytext">TextView</string>
    <string name="register">Register</string>
    <string name="experience_level_hint">Experience Level (Expert, Beginner)</string>
    <string name="country">Country :</string>
    <string name="username_hint">Username :</string>
    <string name="start_journey">Start Journey</string>
    <string name="welcom_message">Welcom To AgriMend Application</string>
    <string name="sharing_your_problem">Sharing Your Problem And Answers With All Users</string>
    <string name="testing_your_plant_easy">Testing Your Plant Easy</string>
    <string name="Browsing_news">Browsing Latest News In Agriculture And Environment</string>
    <string name="choose_treatment">You can treat your plant by selecting your prefere types of control.</string>
    <string name="browsing_community">Browsing Community</string>
    <string name="new_plant">New Plant</string>
    <string name="or">OR</string>
    <string name="profile_menue_title">Profile</string>
    <string name="discussion_community_menu_title">Discussion Community</string>
    <string name="test_plant_menu_title">Test Plant</string>
    <string name="environment_news_menu_title">Environment News</string>
    <string name="add_post_menu_title">Add Post</string>
    <string name="share_menu_title">Share</string>
</resources>
