<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPassword"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/reset"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="#000"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_description_steps"
        android:textSize="11sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_description"
        android:textSize="11sp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/emailTxt"
        android:drawableLeft="@drawable/resize_email_icon"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="10sp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="35dp"
        android:textStyle="normal"
        android:drawableStart="@drawable/resize_email_icon" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:padding="12dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#fff"
        android:background="@drawable/gradient"
        android:layout_marginTop="30dp"
        android:id="@+id/sendReset" />
</LinearLayout>